--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ doc = [
   "pygments==2.19.2",
   "python-dateutil==2.9.0.post0",
   "pytz==2025.2",
+  "tox==4.30.2",
   "regex==2025.9.18",
   "watchdog==6.0.0"
 ]
