--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -29,23 +29,26 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
-          python-version: 3.13
+          python-version: '3.13'
           check-latest: true
 
       - name: Install dependencies
+        shell: bash
         run: |
+          set -euo pipefail
           pip install .[publish]
 
       - name: Get Version
         id: version
         shell: bash
         run: |
+          set -euo pipefail
           version="$(python3 ./.github/actions/get_version.py)"
-          echo "version=$version" >> $GITHUB_OUTPUT
+          echo "version=$version" >> "$GITHUB_OUTPUT"
 
       - name: Is Tag exists
         id: checkTag
-        uses: actions/github-script@v8.0.0 # v7.0.1
+        uses: actions/github-script@v8.0.0 # v8.0.0
         with:
           script: |
             try {
@@ -63,47 +66,58 @@ jobs:
       - if: steps.checkTag.outputs.exists == 'false'
         name: Check Tag
         id: check-tag
+        shell: bash
         run: |
+          set -euo pipefail
           if [[ "${{ steps.version.outputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo "match=true" >> $GITHUB_OUTPUT
+            echo "match=true" >> "$GITHUB_OUTPUT"
           fi
 
       - name: ZIP Component Dir
         if: steps.check-tag.outputs.match == 'true'
+        shell: bash
         run: |
-          cd ${{ github.workspace }}/src/pyecotrend_ista
+          set -euo pipefail
+          cd "${{ github.workspace }}/src/pyecotrend_ista"
           zip -r pyecotrend_ista.zip ./
 
-      - name: Import GPG key
+      - name: Import GPG key (no PII)
         if: steps.check-tag.outputs.match == 'true'
+        shell: bash
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
+          set -euo pipefail
           mkdir -p ~/.gnupg
           chmod 700 ~/.gnupg
-          echo "$GPG_PRIVATE_KEY" | gpg --batch --import
-          echo "allow-loopback-pinentry" > ~/.gnupg/gpg-agent.conf
-          gpg --list-keys
+          printf 'allow-loopback-pinentry\n' > ~/.gnupg/gpg-agent.conf
+          printf 'pinentry-mode loopback\n' > ~/.gnupg/gpg.conf
+          # Import ohne UIDs ins Log zu schreiben
+          gpg --batch --quiet --import <<< "$GPG_PRIVATE_KEY"
 
       - name: Debug Passphrase
         if: steps.check-tag.outputs.match == 'true'
+        shell: bash
+        env:
+          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
+          set -euo pipefail
           if [ -z "$PASSPHRASE" ]; then
             echo "Passphrase is empty!"
             exit 1
           else
             echo "Passphrase is set."
           fi
-        env:
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
       - name: Sign ZIP file
         if: steps.check-tag.outputs.match == 'true'
+        shell: bash
         env:
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          gpg --detach-sign --batch --yes --pinentry-mode loopback --passphrase "$PASSPHRASE" -a ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
+          set -euo pipefail
+          gpg --detach-sign --batch --yes --pinentry-mode loopback --passphrase "$PASSPHRASE" -a "${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip"
 
       - name: Create Release
         if: steps.check-tag.outputs.match == 'true'
@@ -120,17 +134,17 @@ jobs:
         if: steps.check-tag.outputs.match == 'true'
         uses: svenstaro/upload-release-action@81c65b7cd4de9b2570615ce3aad67a41de5b1a13 # v2
         with:
-          repo_token: ${{ secrets.TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
           asset_name: pyecotrend_ista.zip
           tag: ${{ steps.version.outputs.version }}
           overwrite: true
 
-      - name: Upload zip to release
+      - name: Upload zip signature to release
         if: steps.check-tag.outputs.match == 'true'
         uses: svenstaro/upload-release-action@81c65b7cd4de9b2570615ce3aad67a41de5b1a13 # v2
         with:
-          repo_token: ${{ secrets.TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip.asc
           asset_name: pyecotrend_ista.zip.asc
           tag: ${{ steps.version.outputs.version }}
@@ -153,6 +167,7 @@ jobs:
       - name: Build package
         shell: bash
         run: |
+          set -euo pipefail
           pip install build
           python -m build
 
